--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,36 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style2.css"/>
   </head>
   <body>
-    <div class="container-sm">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <ul class="nav justify-content-left">
+        <li class="nav-item">
+          <a class="nav-link active" style="color: white;" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" style="color: white;" href="#">Price Tracking</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" style="color: white;" href="#">Airport Navigation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" style="color: white;" href="#">Luggage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" style="color: white;" href="#">Flight Status</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="container-sm" style="padding-bottom: 50px;">
       <div class="my-2 card">
         <div class="card-body">
           <h5 class="card-title">Locations</h5>
@@ -211,15 +238,139 @@
           </div>
         </div>
       </div>
-      <button id="search-button" class="w-100 btn btn-primary">Search</button>
-      <div class="border-bottom mb-4 pt-4" id="search-results-separator"></div>
+
+      <!-- <button id="search-button" class="w-100 btn btn-primary stats-btn">Search</button> -->
+
+      <button id="realOne search-button" class="w-100 btn btn-primary stats-btn">Search</button>
+
+      <div class="popup-container" id="chartchart">
+        <h3>Ticket Prices: <br> Salt Lake City Airport to Seattle-Tacoma Aiport</h3>
+
+        <div class="popup-content">
+          <div class="popup-details" style="transform: translate(-50%, 800%) rotate(-90deg); position: absolute;">
+          Pricing
+        </div>
+
+          <div class="chart-container">
+            <canvas id="myChart"></canvas>
+          </div>
+          <div class="popup-details">
+            Weekly
+          </div>
+        </div>
+
+        <div class="close-btn">
+
+          <button id="6 Months" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">6 Months View</span></button>
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg> -->
+        </div>
+      </div>
+
+      <!-- <div class="border-bottom mb-4 pt-4" id="search-results-separator"></div>
       <div class="d-flex justify-content-center" id="search-results-loader">
         <div class="spinner-border" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <ul class="list-group mb-4" id="search-results"></ul>
+      <ul class="list-group mb-4" id="search-results"></ul> -->
     </div>
+
+    <!-- 6 months chart -->
+
+    <div class="popup-container2" id="6months">
+      <h3>Ticket Prices: <br> Salt Lake City Airport to Seattle-Tacoma Aiport</h3>
+
+      <div class="popup-content2">
+        <div class="popup-details2" style="transform: translate(-50%, 800%) rotate(-90deg); position: absolute;">
+        Pricing
+      </div>
+
+        <div class="chart-container2">
+          <canvas id="myChart2"></canvas>
+        </div>
+        <div class="popup-details2">
+          Weekly
+        </div>
+      </div>
+
+      <div class="close-btn2">
+
+        <button id="3 Months" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">3 Months View</span></button>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- JAVASCRIPT -->
+
     <script src="./script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+
+    <script>
+      const popupContainer = document.querySelector(".popup-container");
+      const statsBtn = document.querySelector(".stats-btn");
+      const Button = document.getElementById("realOne");
+      const sixMonths = document.getElementById("6months");
+      const filterBtn = document.getElementById("6 Months")
+
+      statsBtn.addEventListener("click", () => {
+        popupContainer.classList.add("active");
+      })
+
+      Button.addEventListener("click", () => {
+        popupContainer.classList.add("active");
+      })
+
+      closeBtn.addEventListener("click", () => {
+        popupContainer.classList.remove("active");
+      })
+
+      filterBtn.addEventListener("click", () => {
+        popupContainer.classList.remove("active");
+      })
+
+    </script>
+
+    <script>
+      const ctx = document.getElementById('myChart').getContext('2d');
+      const myChart = new Chart(ctx, {
+          type: 'line',
+          data: {
+              labels: ['08/27', '09/3', '09/10', '09/17', '09/24', '10/1', '10/8', '10/15', '10/22', '10/29', '11/5', '11/12'],
+              datasets: [{
+                  
+                  data: [195, 230, 230, 215, 235, 210, 200, 170, 180, 165, 150, 180],
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.2)',
+                      'rgba(54, 162, 235, 0.2)',
+                      'rgba(255, 206, 86, 0.2)',
+                      'rgba(75, 192, 192, 0.2)',
+                      'rgba(153, 102, 255, 0.2)',
+                      'rgba(255, 159, 64, 0.2)'
+                  ],
+                  borderColor: [
+                      '#3456bc',
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+              scales: {
+                  y: { 
+                      beginAtZero: false
+                  }
+              }
+          }
+      });
+
+      window.scrollTo(0, 0)
+
+      window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    }
+      </script>
   </body>
 </html>
