--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,7 @@
                     class="form-control"
                     id="adults-input"
                     aria-describedby="adults-label"
+                    value = "0"
                   />
                 </div>
                 <span id="adults-label" class="form-text"
@@ -211,6 +212,7 @@
                     class="form-control"
                     id="children-input"
                     aria-describedby="children-label"
+                    value = "0"
                   />
                 </div>
                 <span id="children-label" class="form-text"
@@ -228,6 +230,7 @@
                     class="form-control"
                     id="infants-input"
                     aria-describedby="infants-label"
+                    value = "0"
                   />
                 </div>
                 <span id="infants-label" class="form-text"
