--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,15 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #4c86d9">
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <ul class="nav justify-content-left">
+
+        <img src="../public/OnTheFlyLogo.png" width="100">
         <li class="nav-item">
           <a class="nav-link active" style="color: white;" href="#">Home</a>
         </li>
@@ -244,7 +246,7 @@
 
       <!-- <button id="search-button" class="w-100 btn btn-primary stats-btn">Search</button> -->
 
-      <button id="realOne search-button" class="w-100 btn btn-primary stats-btn">Search</button>
+      <button id="realOne search-button" class="w-100 btn btn-primary" style="background-color: #4c86d9">Search</button>
 
       <div class="popup-container" id="chartchart">
         <h3>Ticket Prices: <br> Salt Lake City Airport to Seattle-Tacoma Aiport</h3>
