--- a/public/index.html
+++ b/public/index.html
@@ -263,12 +263,13 @@
         </div>
 
         <div class="close-btn">
-          
+          <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">3 Months View</span></button>
+        </div>
+        <div class="btn1">
+          <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">1 Month View</span></button>
+        </div>
+        <div class="btn2">
           <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">6 Months View</span></button>
-          <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">6 Months View</span></button>
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-          </svg> -->
         </div>
       </div>
 
@@ -297,8 +298,13 @@
         </div>
   
         <div class="close-btn2">
-  
           <button id="3 Months" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">3 Months View</span></button>
+          <div class="btn12">
+            <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">1 Month View</span></button>
+          </div>
+          <div class="btn22">
+            <button id="6 Months" onclick="myFunction()" type="button" class="btn btn-dark" style="width: 100px"><span style="font-size: 11px;">6 Months View</span></button>
+          </div>
         </div>
       </div>
     </div>
