--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
 
       <!-- <button id="search-button" class="w-100 btn btn-primary stats-btn">Search</button> -->
 
-      <button id="realOne search-button" class="w-100 btn btn-primary" style="background-color: #4c86d9">Search</button>
+      <button id="realOne search-button" class="w-100 btn btn-primary stats-btn" style="background-color: #4c86d9">Search</button>
 
       <div class="popup-container" id="chartchart">
         <h3>Ticket Prices: <br> Salt Lake City Airport to Seattle-Tacoma Aiport</h3>
